--- a/css/styles.css
+++ b/css/styles.css
@@ -14,12 +14,15 @@ header {
 }
 
 header nav {
+    display: flex;
     flex: 1;
+    justify-content: flex-end;
 }
 
 header nav ul {
     display: flex;
     justify-content: flex-end;
+    flex: 1;
 }
 
 header nav li {
@@ -69,12 +72,13 @@ a:link {
 }
 
 a:hover {
-    color: aqua
+    color: rgb(101, 101, 101);
 }
 
 a {
     color: white;
     font-size: 18px;
+    text-decoration: none;
 }
 
 
